Don't throw additional Error in require_once if exception already thrown

As pointed out in comments on bug #66216.